refinement in general

--- a/tmpl_mail/review-360-mail.html
+++ b/tmpl_mail/review-360-mail.html
@@ -22,7 +22,7 @@
     <p>&nbsp;</p>
     <p>To proceed, please click <a href="{{link}}">THIS LINK</a>.</p>
     <p>&nbsp;</p>
-    <p>Looking forward to your reply before link above expired at: {{expired_at}}</p>
+    <p>Looking forward to your reply before link above expired at: <strong>{{expired_at}}</strong></p>
     <p>&nbsp;</p>
     <p>Thank you!</p>
     <br/>
