bugfiix forgot password

--- a/tmpl_mail/forgot-password.html
+++ b/tmpl_mail/forgot-password.html
@@ -1,8 +1,3 @@
-<html lang="en">
-<head>
-    <title>Forgot Password</title>
-</head>
-<body>
 <div style="padding: 0; margin: 0; font-family: Arial,serif;">
     <img src="https://360.onelabs.co/assets/images/onelabs-logo@2x.png" style="vertical-align: middle" alt="logo"
          height="48px">
@@ -12,19 +7,11 @@
     <hr/>
 </div>
 <div style="font-family: Arial,serif; background-color: #dfebf6; padding: 1em; margin:0;">
-    <p>Dear <strong>{{name}}</strong>,</p>
-    <br/>
-    <p>You've request forgot password, if by any chance it's not, then just ignore this email.</p>
-    <br/>
-    <p>To proceed, please click <a href="{{link}}">THIS LINK</a>, it will brought you onto web-page so that you can set
-        your password again.</p>
-    <br/>
-    <p>Meanwhile link above are one time access and will expire soon, thus please process immediately.</p>
-    <br/>
-    <p>Thank you!</p>
-    <br/>
+    <p>Dear <strong>{{requester_name}}</strong></p><br/>
+    <p>You've request forgot password, if by any chance it's not, then just ignore this email.</p><br/>
+    <p>To proceed, please click <a href="{{recovery_link}}">THIS LINK</a>, it will brought you onto a page so that you can set your password again.</p>
+    <p>Meanwhile link above are one time access and will expire soon, thus please process immediately.</p><br/>
+    <p>Thank you!</p><br/>
     <p>Sincerely,</p>
     <p>Onelabs System</p>
 </div>
-</body>
-</html>
