--- a/tmpl_mail/forgot-password.html
+++ b/tmpl_mail/forgot-password.html
@@ -7,9 +7,9 @@
     <hr/>
 </div>
 <div style="font-family: Arial,serif; background-color: #dfebf6; padding: 1em; margin:0;">
-    <p>Dear <strong>{{.RequesterName}}</strong></p><br/>
+    <p>Dear <strong>{{RequesterName}}</strong></p><br/>
     <p>You've request forgot password, if by any chance it's not, then just ignore this email.</p><br/>
-    <p>To proceed, please click <a href="{{.RecoveryLink}}">THIS LINK</a>, it will brought you onto a page so that you can set your password again.</p>
+    <p>To proceed, please click <a href="{{RecoveryLink}}">THIS LINK</a>, it will brought you onto a page so that you can set your password again.</p>
     <p>Meanwhile link above are one time access and will expire soon, thus please process immediately.</p><br/>
     <p>Thank you!</p><br/>
     <p>Sincerely,</p>
